; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/kxld/extr_kxld_splitinfolc.c_kxld_splitinfolc_init_from_macho.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/kxld/extr_kxld_splitinfolc.c_kxld_splitinfolc_init_from_macho.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.linkedit_data_command = type { i32, i32, i32, i32 }

@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kxld_splitinfolc_init_from_macho(%struct.linkedit_data_command* %0, %struct.linkedit_data_command* %1) #0 {
  %3 = alloca %struct.linkedit_data_command*, align 8
  %4 = alloca %struct.linkedit_data_command*, align 8
  store %struct.linkedit_data_command* %0, %struct.linkedit_data_command** %3, align 8
  store %struct.linkedit_data_command* %1, %struct.linkedit_data_command** %4, align 8
  %5 = load %struct.linkedit_data_command*, %struct.linkedit_data_command** %3, align 8
  %6 = call i32 @check(%struct.linkedit_data_command* %5)
  %7 = load %struct.linkedit_data_command*, %struct.linkedit_data_command** %4, align 8
  %8 = call i32 @check(%struct.linkedit_data_command* %7)
  %9 = load %struct.linkedit_data_command*, %struct.linkedit_data_command** %4, align 8
  %10 = getelementptr inbounds %struct.linkedit_data_command, %struct.linkedit_data_command* %9, i32 0, i32 3
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.linkedit_data_command*, %struct.linkedit_data_command** %3, align 8
  %13 = getelementptr inbounds %struct.linkedit_data_command, %struct.linkedit_data_command* %12, i32 0, i32 3
  store i32 %11, i32* %13, align 4
  %14 = load %struct.linkedit_data_command*, %struct.linkedit_data_command** %4, align 8
  %15 = getelementptr inbounds %struct.linkedit_data_command, %struct.linkedit_data_command* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.linkedit_data_command*, %struct.linkedit_data_command** %3, align 8
  %18 = getelementptr inbounds %struct.linkedit_data_command, %struct.linkedit_data_command* %17, i32 0, i32 2
  store i32 %16, i32* %18, align 4
  %19 = load %struct.linkedit_data_command*, %struct.linkedit_data_command** %4, align 8
  %20 = getelementptr inbounds %struct.linkedit_data_command, %struct.linkedit_data_command* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.linkedit_data_command*, %struct.linkedit_data_command** %3, align 8
  %23 = getelementptr inbounds %struct.linkedit_data_command, %struct.linkedit_data_command* %22, i32 0, i32 1
  store i32 %21, i32* %23, align 4
  %24 = load i32, i32* @TRUE, align 4
  %25 = load %struct.linkedit_data_command*, %struct.linkedit_data_command** %3, align 8
  %26 = getelementptr inbounds %struct.linkedit_data_command, %struct.linkedit_data_command* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 4
  ret void
}

declare dso_local i32 @check(%struct.linkedit_data_command*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
